2008-11-13  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/ErrorCheckingPreferences.h:
	* plugins/actions/externalvideoplayer/ExternalVideoPlayer.cc:
	* plugins/actions/findandreplace/FindAndReplace.cc:
	* plugins/actions/preferences/PreferencePage.h:
	Migrate to widget_config_utility.

	* src/utility.cc:
	* src/utility.h:
	Remove WidgetToConfig code.

2008-11-13  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/widget_config_utility.cc:
	* src/widget_config_utility.h:
	New files widget_config_utility.

2008-11-13  kitone  <kitone@gna.org>

	* plugins/actions/spellchecking/SpellChecking.h:
	* src/gtkmm_utility.h:
	Move ComboBoxText to spellChecking file.

	* src/utility.h:
	Remove utility::get_widget_derived functions.

2008-11-13  kitone  <kitone@gna.org>

	* plugins/actions/changeframerate/ChangeFramerate.cc:
	* plugins/actions/configurekeyboardshortcuts/ConfigureKeyboardShortcuts.cc:
	* plugins/actions/errorchecking/ErrorCheckingPlugin.cc:
	* plugins/actions/errorchecking/ErrorCheckingPreferences.h:
	* plugins/actions/externalvideoplayer/ExternalVideoPlayer.cc:
	* plugins/actions/findandreplace/FindAndReplace.cc:
	* plugins/actions/movesubtitles/MoveSubtitles.cc:
	* plugins/actions/preferences/PreferencesPlugin.cc:
	* plugins/actions/scalesubtitles/ScaleSubtitles.cc:
	* plugins/actions/spellchecking/SpellChecking.cc:
	* plugins/actions/splitdocument/SplitDocument.cc:
	* plugins/actions/styleeditor/StyleEditor.cc:
	* plugins/actions/viewmanager/ViewManager.cc:
	Migrate to gktmm_utility::get_widget_derived.

2008-11-13  kitone  <kitone@gna.org>

	* src/ExtensionManager.cc:
	Support SE_DEV.

	* src/Makefile.am:
	Add DEV paths.

	* src/gui/DialogCharacterCodings.cc:
	* src/gui/DialogFileChooser.cc:
	* src/main.cc:
	Migrate to gktmm_utility::get_widget_derived.

2008-11-13  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/gtkmm_utility.cc:
	* src/gtkmm_utility.h:
	New files.

	* src/utility.h:
	define SE_DEV_VALUE for dev help.
